--- a/public/staticwebapp.config.json
+++ b/public/staticwebapp.config.json
@@ -2,7 +2,8 @@
   "routes": [
     {
       "route": "/*",
-      "serve": "/index.html"
+      "serve": "/index.html",
+      "statusCode": 200
     }
   ]
 }
