--- a/package.json
+++ b/package.json
@@ -15,13 +15,14 @@
     "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "CI=false react-scripts build",
-    "test": "CI=false react-scripts test",
-    "eject": "react-scripts eject",
-    "lint": "eslint . --fix"
-  },
+"scripts": {
+  "start": "react-scripts start",
+  "build": "react-scripts build",
+  "test": "set CI=false && react-scripts test",
+  "eject": "react-scripts eject",
+  "lint": "eslint . --fix"
+},
+
   "eslintConfig": {
     "extends": [
       "react-app",
