--- a/package.json
+++ b/package.json
@@ -11,14 +11,14 @@
     "axios": "^1.7.8",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.0.0",
+    "react-router-dom": "^6.14.1",
     "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "cross-env CI=false react-scripts test",
+    "test": "cross-env CI=false react-scripts test --passWithNoTests",
     "eject": "react-scripts eject",
     "lint": "eslint . --fix"
   },
@@ -43,15 +43,16 @@
       "last 1 safari version"
     ]
   },
-"jest": {
-  "transformIgnorePatterns": [
-    "/node_modules/(?!(axios|react-router-dom)/)"
-  ],
-  "moduleNameMapper": {
-    "^react-router-dom$": "<rootDir>/node_modules/react-router-dom"
-  }
-},
+  "jest": {
+    "transformIgnorePatterns": [
+      "/node_modules/(?!(axios|react-router-dom)/)"
+    ],
+    "moduleNameMapper": {
+      "^react-router-dom$": "<rootDir>/node_modules/react-router-dom"
+    }
+  },
   "devDependencies": {
+    "@babel/core": "^7.22.5",
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@babel/preset-env": "^7.22.5",
     "@babel/preset-react": "^7.22.5",
