--- a/public/web.config
+++ b/public/web.config
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <system.webServer>
+    <staticContent>
+      <!-- Ensure JSON files are served correctly -->
+      <mimeMap fileExtension=".json" mimeType="application/json" />
+    </staticContent>
     <rewrite>
       <rules>
         <rule name="React Routes" stopProcessing="true">
